Fix ViatorDestinationProviderTest